@@ -1,6 +1,6 @@
 Package: robustbase
 Version: 0.4-0
-Date: 2007-..-..
+Date: 2007-10-27
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
@@ -22,4 +22,4 @@ Depends: R (>= 2.3.1), stats, graphics, methods
 Suggests: MASS
 LazyLoad: yes
 LazyData: yes
-License: GPL version 2 or later
+License: GPL (>= 2)
